; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/soc/codecs/extr_ad1938.c_ad1938_read_reg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/soc/codecs/extr_ad1938.c_ad1938_read_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_codec = type { i32 }
%struct.spi_transfer = type { i8*, i8*, i32 }
%struct.spi_message = type { i32 }

@AD1938_SPI_BUFLEN = common dso_local global i32 0, align 4
@AD1938_SPI_ADDR = common dso_local global i32 0, align 4
@AD1938_SPI_READ = common dso_local global i32 0, align 4
@EIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_codec*, i32)* @ad1938_read_reg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ad1938_read_reg(%struct.snd_soc_codec* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.snd_soc_codec*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.spi_transfer, align 8
  %11 = alloca %struct.spi_message, align 4
  %12 = alloca i32, align 4
  store %struct.snd_soc_codec* %0, %struct.snd_soc_codec** %4, align 8
  store i32 %1, i32* %5, align 4
  %13 = load i32, i32* @AD1938_SPI_BUFLEN, align 4
  %14 = zext i32 %13 to i64
  %15 = call i8* @llvm.stacksave()
  store i8* %15, i8** %6, align 8
  %16 = alloca i8, i64 %14, align 16
  store i64 %14, i64* %7, align 8
  %17 = load i32, i32* @AD1938_SPI_BUFLEN, align 4
  %18 = zext i32 %17 to i64
  %19 = alloca i8, i64 %18, align 16
  store i64 %18, i64* %8, align 8
  %20 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %10, i32 0, i32 0
  store i8* %16, i8** %20, align 8
  %21 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %10, i32 0, i32 1
  store i8* %19, i8** %21, align 8
  %22 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %10, i32 0, i32 2
  %23 = load i32, i32* @AD1938_SPI_BUFLEN, align 4
  store i32 %23, i32* %22, align 8
  %24 = load i32, i32* @AD1938_SPI_ADDR, align 4
  %25 = shl i32 %24, 1
  %26 = load i32, i32* @AD1938_SPI_READ, align 4
  %27 = or i32 %25, %26
  %28 = trunc i32 %27 to i8
  %29 = getelementptr inbounds i8, i8* %16, i64 0
  store i8 %28, i8* %29, align 16
  %30 = load i32, i32* %5, align 4
  %31 = trunc i32 %30 to i8
  %32 = getelementptr inbounds i8, i8* %16, i64 1
  store i8 %31, i8* %32, align 1
  %33 = getelementptr inbounds i8, i8* %16, i64 2
  store i8 0, i8* %33, align 2
  %34 = call i32 @spi_message_init(%struct.spi_message* %11)
  %35 = call i32 @spi_message_add_tail(%struct.spi_transfer* %10, %struct.spi_message* %11)
  %36 = load %struct.snd_soc_codec*, %struct.snd_soc_codec** %4, align 8
  %37 = getelementptr inbounds %struct.snd_soc_codec, %struct.snd_soc_codec* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @spi_sync(i32 %38, %struct.spi_message* %11)
  store i32 %39, i32* %9, align 4
  %40 = load i32, i32* %9, align 4
  %41 = icmp eq i32 %40, 0
  br i1 %41, label %42, label %46

42:                                               ; preds = %2
  %43 = getelementptr inbounds i8, i8* %19, i64 2
  %44 = load i8, i8* %43, align 2
  %45 = sext i8 %44 to i32
  store i32 %45, i32* %3, align 4
  store i32 1, i32* %12, align 4
  br label %49

46:                                               ; preds = %2
  %47 = load i32, i32* @EIO, align 4
  %48 = sub i32 0, %47
  store i32 %48, i32* %3, align 4
  store i32 1, i32* %12, align 4
  br label %49

49:                                               ; preds = %46, %42
  %50 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %50)
  %51 = load i32, i32* %3, align 4
  ret i32 %51
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @spi_message_init(%struct.spi_message*) #2

declare dso_local i32 @spi_message_add_tail(%struct.spi_transfer*, %struct.spi_message*) #2

declare dso_local i32 @spi_sync(i32, %struct.spi_message*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
